Updated figure for affordance

--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
@@ -190,8 +190,8 @@ L'apprentissage des affordances est une étape cruciale dans l'approche de la ro
                   thick,main node/.style={circle,draw,minimum size=20mm,font=\Large\bfseries}]
 
     \node[main node] (1) {Actions};
-    \node[main node] (2) [below left of=1] {Objects};
-    \node[main node] (3) [below right of=1] {Effects};
+    \node[main node] (2) [below left of=1] {Objets};
+    \node[main node] (3) [below right of=1] {Effets};
 
     % \path
     %   (2) edge node [below]{} (1)
